8263430: Uninitialized Method* variables after JDK-8233913

Reviewed-by: coleenp, hseigel